--- a/Formato Memoria/Anexo2/Anexo_B_Funcionalidad.tex
+++ b/Formato Memoria/Anexo2/Anexo_B_Funcionalidad.tex
@@ -1,6 +1,6 @@
 \section{Sección de preguntas sobre las funcionalidades del sistema}
 
-\paragraph{5.  ¿Cree usted que las funcionalidades son suficientes para que la aplicación sea útil?  }.
+\textbf{5.  ¿Cree usted que las funcionalidades son suficientes para que la aplicación sea útil?}
 
 \begin{figure}[h!]
     \centering
@@ -8,7 +8,7 @@
     \caption{\label{fig: Pregunta5}Resultado de la pregunta cinco.}
 \end{figure}
 
-\paragraph{6.  ¿El sistema logra realizar una rendición fiable? (Siempre, A veces, nunca)}.
+\textbf{6.  ¿El sistema logra realizar una rendición fiable? (Siempre, A veces, nunca)}
 
 \begin{figure}[h!]
     \centering
