--- a/Formato Memoria/Anexo2/Anexo_B_General_Sistema.tex
+++ b/Formato Memoria/Anexo2/Anexo_B_General_Sistema.tex
@@ -1,4 +1,4 @@
-\paragraph{1.  ¿Cree usted que es necesaria una herramienta que ayude a las OE a realizar el proceso de Solicitud de Fondo por Rendir?}.
+\textbf{1.  ¿Cree usted que es necesaria una herramienta que ayude a las OE a realizar el proceso de Solicitud de Fondo por Rendir?}
 
     \begin{figure}[h!]
         \centering
@@ -6,7 +6,7 @@
         \caption{\label{fig: Pregunta1}Resultado de la pregunta uno.}
     \end{figure}
 \newpage
-\paragraph{2.  ¿Cree usted que esta herramienta puede ayudar a reducir el tiempo que demanda realizar una rendición? (En escala de 1 (No es de ayuda) a 5 (Es de mucha ayuda))}.
+\textbf{2.  ¿Cree usted que esta herramienta puede ayudar a reducir el tiempo que demanda realizar una rendición? (En escala de 1 (No es de ayuda) a 5 (Es de mucha ayuda))}
 
 \begin{figure}[h!]
     \centering
@@ -14,7 +14,7 @@
     \caption{\label{fig: Pregunta2}Resultado de la pregunta dos.}
 \end{figure}
 
-\paragraph{3.  ¿Cree usted que la mayoría de las personas pueden aprender a usar el sistema rápidamente? (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}.
+\textbf{3.  ¿Cree usted que la mayoría de las personas pueden aprender a usar el sistema rápidamente? (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}
 
 \begin{figure}[h!]
     \centering
@@ -22,7 +22,8 @@
     \caption{\label{fig: Pregunta3}Resultado de la pregunta tres.}
 \end{figure}
 
-\paragraph{4.  ¿Cree usted que gracias a la aplicación se puede reducir la causa de rechazo de la Rendición? (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}.
+\newpage
+\textbf{4.  ¿Cree usted que gracias a la aplicación se puede reducir la causa de rechazo de la Rendición? (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}
 
 \begin{figure}[h!]
     \centering
