--- a/Formato Memoria/Capitulo1/1.5_Alcances.tex
+++ b/Formato Memoria/Capitulo1/1.5_Alcances.tex
@@ -7,7 +7,7 @@ La aplicación, \emph{SimRend}, es un sistema web de fondos por rendir para Fede
 
     \item Confeccionar la rendición de fondos por rendir que detallen los gastos incurridos de una actividad tras ser aprobada su correspondiente solicitud.
     
-    \item Gestionar los comprobantes de gastos (boletas o facturas) incurridas en un evento. Esto comprende la validación de fechas, listado de los comprobantes y selección del conjunto de comprobantes que mejor se ajusta al presupuesto expuesto en la solicitud de fondo enviada por la O.E. a quien dirige la Dirección de Escuela o la DAAE.
+    \item Gestionar los comprobantes de gastos (boletas o facturas) incurridas en un evento. Esto comprende la validación de fechas, listado de los comprobantes y selección del conjunto de comprobantes que mejor se ajusta al presupuesto expuesto en la solicitud de fondo enviada por la OE a quien dirige la Dirección de Escuela o la DAAE.
     
     %\item Generar hojas particionadas para pegar las boletas y/o facturas que se rinden.
 \end{itemize}
