--- a/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
+++ b/Formato Memoria/Capitulo2/2.2_Tecnologias_Utilizadas.tex
@@ -1,4 +1,4 @@
-Para resolver el problema mencionado en el Capítulo \ref{sec:Intro}, existen muchas tecnologías dentro de las cuales se encuentra, PHP, Ruby on rails, WordPress y Wix, entre otras. Pero para este proyecto se utiliza ASP.NET Core cuyo motivo se debe a que es un lenguaje sólido y robusto, tanto para proyectos pequeños, grandes o con gran potencial de crecimiento. Además, está orientado a objetos debido a que C\# conforma parte de la tecnología, haciendo que el código sea ordenado y legible. Por otra parte, se puede utilizar para programar aplicaciones móviles, web o incluso para aplicaciones de computadoras de escritorio. Por último, otra de las razones de escoger esta tecnología es porque las empresas del rubro la están solicitando como conocimientos requeridos. 
+Para resolver el problema mencionado en el Capítulo \ref{sec:Intro}, existen muchas tecnologías dentro de las cuales se encuentra, PHP, Ruby on rails, WordPress y Wix, entre otras. Pero para este proyecto se utiliza ASP.NET Core cuyo motivo se debe a que es un framework sólido y robusto, tanto para proyectos pequeños, grandes o con gran potencial de crecimiento. Además, está orientado a objetos debido a que C\# conforma parte de la tecnología, haciendo que el código sea ordenado y legible. Por otra parte, se puede utilizar para programar aplicaciones móviles, web o incluso para aplicaciones de computadoras de escritorio. Por último, otra de las razones de escoger esta tecnología es porque las empresas del rubro la están solicitando como conocimientos requeridos. 
 
 Para entrar un poco más en detalle, se da a conocer pequeñas descripciones de los principales componentes que cuenta esta tecnología, además de las librerías que se utilizan en el proyecto.
 
