--- a/Formato Memoria/Capitulo3/3.2.4_Trabajo.tex
+++ b/Formato Memoria/Capitulo3/3.2.4_Trabajo.tex
@@ -1,4 +1,4 @@
-Tras detectar el problema, lo primero que se realizó fue estudiar cómo realizar el proceso de solicitud de fondo por rendir, el cual se encuentra en la RU N\grad 2083 del año 2017. También se observó cómo las distintas OE realizan este proceso y así detectar las principales falencias que existen. Con todo lo mencionado anteriormente se procede a realizar el diagrama de todo el proceso que conlleva una solicitud de fondo por rendir para las distintas OE a la cual está enfocada la aplicación. Esto con el proposito de conocer y conseguir la mayor cantidad de requisitos e información del sistema.
+Tras detectar el problema, lo primero que se realizó fue estudiar cómo realizar el proceso de solicitud de fondo por rendir, el cual se encuentra en la RU N\grad 2083 del año 2017. También se observó cómo las distintas OE realizan este proceso y así detectar las principales falencias que existen. Con todo lo mencionado anteriormente se procede a realizar el diagrama de todo el proceso que conlleva una solicitud de fondo por rendir para las distintas OE a la cual está enfocada la aplicación. Esto con el propósito de conocer y conseguir la mayor cantidad de requisitos e información del sistema.
 
 Luego de obtener los requisitos que debe cumplir el sistema se realizó el diseño de la aplicación el cual contempla la línea de navegación, la estructura general, la base de datos y el diseño de interfaz.
 
