--- a/Formato Memoria/Capitulo6/6.4_Resultados.tex
+++ b/Formato Memoria/Capitulo6/6.4_Resultados.tex
@@ -1,14 +1,14 @@
-La encuesta cuenta con tres secciones y fue realizada a los Presidentes(as) y Secretarios(as) de Finanzas de cada OE. Pero previo a esta, los representantes tuvieron la oportunidad de probar el sistema. Cabe destacar que estas pruebas están enfocadas en el proceso de una Solicitud de Fondo por Rendir.
+La encuesta cuenta con tres secciones y está dirigida a los Presidentes(as) y Secretarios(as) de Finanzas de cada OE. Previo a esta, los representantes tuvieron la oportunidad de probar el sistema. Cabe destacar que estas pruebas están enfocadas en el proceso de una Solicitud de Fondo por Rendir.
 
 A continuación, se da a conocer el resumen de los resultados de cada sección de la encuesta.
 
 \paragraph{Sección de preguntas generales sobre el sistema}
 
-El 75\% de los representantes de las OE expresan que es necesaria una herramienta que ayude a asistir en el proceso de realizar una Solicitud de Fondo por Rendir. Por otra parte, el 56\% de los encuestados indican que el sistema ayudaría a reducir el tiempo en que demanda en realizar una Rendición.
+El 75\% de los representantes de las OE expresan que es necesaria una herramienta que ayude a asistir en el proceso de realizar una Solicitud de Fondo por Rendir. Por otra parte, el 56\% de los encuestados indican que el sistema ayudaría a reducir el tiempo que demanda realizar una Rendición.
 
-El 44\% de los encuestados indican que la mayoría de las personas pueden aprender a utilizar el sistema rápidamente mientras que el resto tienen ciertas demuestran ciertas dudas, pero aun así confía en el sistema.
+El 44\% de los encuestados indican que la mayoría de las personas pueden aprender a utilizar el sistema rápidamente, mientras que el resto demuestra ciertas dudas, pero aun así confía en el sistema.
 
-Por último, el 63\% de los encuestados indican que la aplicación ayudaría a reducir la causa de rechazo de una Rendición, mientras que el resto demuestran no está completamente en acuerdo con esta afirmación, pero confían en el sistema entre un 60\% a un 80\%.
+Por último, el 63\% de los encuestados indican que la aplicación ayudaría a reducir la causa de rechazo de una Rendición, mientras que el resto reporta que no está completamente en acuerdo con esta afirmación, pero confían en el sistema entre un 60\% a un 80\%.
 
 \paragraph{Sección de preguntas sobre las funcionalidades del sistema}
 
@@ -21,3 +21,5 @@ El 63\% de los representantes indican que la aplicación es fácil de usar y que
 Por último, el 75\% de los representantes indican que el proceso completo de realizar una Solicitud de Fondo por Rendir es claro, mientras que el 25\% indican que la claridad de este proceso es de un 80\%.
 
 Para más detalle sobre la encuesta realizada, se puede consultar en el \textbf{Anexo \ref{sec: Anexo_B}}.
+
+Cabe destacar que por razones de tiempo, para la versión final de esta memoria se realizará nuevamente este proceso de encuestas para incorporar la mejora de la interfaz al estudio.
