--- a/Formato Memoria/Resumen.tex
+++ b/Formato Memoria/Resumen.tex
@@ -1,14 +1,42 @@
 \begin{resumen}
-    El proceso de Solicitud de Fondo por Rendir que realizan las distintas Organizaciones Estudiantiles de la Universidad de Talca tiene la finalidad de obtener recursos para hacer una actividad. Este proceso conlleva confeccionar una Solicitud del evento la cual es dirigida a la Dirección de Escuela en caso de Centros de Alumnos o a la Dirección de Apoyo a Actividades Estudiantiles en caso de Federación. Luego tras la aprobación de la Solicitud por entidades de la Casa de estudio, la Organización Estudiantil recibe una Resolución Universitaria correspondiente a la Solicitud. Por último, tras realizar el evento, se procede a realizar la Rendición en donde se declara los gastos incurridos en el evento. Después, esta Rendición es enviada nuevamente a la Dirección de Escuela la cual la analiza. En caso de que esté correcta, es enviada al departamento de Tesorería para su posterior revisión. En caso de ser aprobada se realiza la devolución del monto solicitado, pero si encontran un error, es rechazada y devuelta a la Organización Estudiantil para su posterior corrección.
 
-El rechazo de la Rendición es un gran problema ya que la entidad encargada de la revisión no envía una notificación con los errores detectados en las Rendición, sino que envía la notificación del primer error encontrado. Esto provoca que se posponer el reembolso del dinero además de aplazar otras actividades planificadas por la Organización Estudiantil dado a que no se puede realizar nuevas Solicitudes de Fondo por Rendir mientras no culmine una Rendición que se encuentra pendiente.
+    %Marco general: 2 a 3 lineas contando el marco general, contexto o motivacion del problema.
 
-Tas lo expuesto anteriormente es que esta memoria busca ayudar a resolver esta problemática, diseñando y desarrollando una herramienta cuya finalidad es brinda apoyo a las Organizaciones Estudiantiles para que asista en el proceso de Fondo por Rendir y así disminuir los posibles errores al momento de confeccionar una Solicitud y su posterior Rendición.
+    %El problema que esta memoria resuelve surge cuando el autor se encontraba en calidad de Presidente del Centro de Alumnos de Ingeniería Civil en Computación de la Universidad de Talca.
+    
+    %Definicion o planteamiento del problema: 3 a 5 lineas en donde cuentan cual es el problema que efectivamente estas enfrentando.
 
-Esta herramienta es una plataforma Web y para su construcción se utiliza la metodología de desarrollo ágil \emph{Scrum} debido a que permite la adaptación al cambio a medida que se va desarrollando el sistema en conjunto con retroalimentaciones que brindan los usuarios cuando se presentan incrementos del proyecto.
+    El inconveniente nace cuando una Rendición que justifica los gastos realizados en un evento por una Organización Estudiantil es rechazada por Tesorería al momento de su revisión. Esta entidad no envía una notificación con los errores detectados, sino que notifica el primer error, provocando el retraso tanto del reembolso del dinero como de otras actividades planificadas por la Organizacion Estudiantil ya que no se pueden realizar nuevas Solicitudes de Fondos mientras no culmine la Rendición pendiente.
+    
+    %Metodologia: 3 a 5 lineas en que hablas de la metodologia de trabajo.
+    Tras lo expuesto anteriormente es que se realiza una plataforma web. Para su construcción se utiliza la metodología de desarrollo ágil \emph{Scrum}, debido a que permite la adaptación al cambio a medida que se desarrolla el sistema en conjunto con retroalimentaciones que brindan los usuarios.
+    
+    %Antecedentes o Marco teorico: 3 a 8 lineas de cosas previas o relacionadas que hay que saber antes de enfrentar el resto del resumen.
 
-Además se detalla las características del sistema y el modelo de contexto para la mayor comprensión del actual sistema y su enfoque, el cual ayuda a la planificación del ciclo de vida del proyecto. Tras lo mencionado con anterioridad se procede a realizar el diseño de la aplicación la cual comprende de confeccionar el Mapa de Navegación junto con el diseño general de la interfaz. Luego se detalla la arquitectura del sistema para así diseñar el modelo de datos y el modelo relacional.
+    %Existen tres tipos de Organizaciones Estudiantiles las cuales son: Federación de Estudiantes, Centros de Alumnos y Grupos Intermedios. Pero esta herramienta está enfocada para que asista en el proceso de Solicitud de Fondos por Rendir para las dos primeras Organizaciones.
+    
+    %Desarrollo: 3 a 5 lineas explicando como resolviste el problema.
 
-Finalmente se muestra la aplicación obtenida y los resultados obtenidos a través de evaluaciones con pruebas de caja negra y de usabilidad.
+    Para resolver el problema se realizan encuestas a los clientes con el fin de obtener las características del sistema y el modelo de contexto para la mayor comprensión del actual sistema. Luego, estas características son categorizadas de acuerdo con la utilidad que preste (planificación de un \emph{Sprint}). Además, se realiza el diseño de la aplicación la cual comprende en confeccionar el mapa de navegación, diseño de interfaz, la arquitectura y el modelo relacional del sistema. 
+    
+    %Resultados: 2 a 5 lineas donde cuentan los resultados mas importantes de su memoria. Si pueden ponerle numeros al asunto mejor, pues es mas objetivo.
+
+    Luego de desarrollar la aplicación y el uso de esta por parte de los clientes, el 75\% de ellos expresan que es una herramienta necesaria para asistir en el proceso de Solicitud de Fondo por Rendir. Por otra parte, el 63\% de los encuestados dicen que la aplicación ayudaría a reducir la causa de rechazo de una rendición.
+    
+    %Validacion: 2 a 3 lineas donde explican como verifican que los objetivos de vuestra memoria fueron cumplidos (o no). Esto puede ser hablando de la evaluacion experimental de lo que hicieron, evaluacion de los resultados de la memoria, algun mecanismo de validacion de la aplicacion, encuestas de usuario o la forma que sea apropiada para vuestra memoria en especifico. Ojo que si los objetivos no se cumplen, deben tener una buena explicacion de porque no se cumplieron. Nuevamente,si pueden valorar con alguna cifra la validez de los resultados mejor, pues es mas objetivo.
+    
+    Estos resultados se obtienen a través de la evaluación de la aplicación realizadas por pruebas de Caja Negra y una encuesta de usabilidad que se realiza al usuario.
+    
+    %Discusion de resultados: 1 a 5 lineas en donde hagan una interpretacion reflexiva de los resultados, tambien se puede ver que estan mostrando que significan los resultados, etc.
+    
+    %Dado que un gran porcentaje de Representantes mencionan que la herramienta ayudaría a reducir la causa de rechazo de una rendición,se puede inferir que la aplicación podría ser oficial para todas las Organizaciones Estudiantiles de la Casa de Estudio.
+
+    %Conclusiones: 2 a 5 lineas donde esbozan los elementos mas importantes de las conclusiones de vuestro trabajo.
+    
+    Para concluir, se afirma que la aplicación tiene muchas mejoras para obtener una herramienta la cual asista en el proceso de Solicitud y Rendición de un Fondo con mayor fiabilidad de resultados. Sin embargo, la aplicación contempla las funcionalidades principales y sigue los estándares impuestos por la Casa de Estudio. Como consecuencia de lo anterior, permite reducir los errores que podrían rechazar las Rendiciones.
+
+    %Trabajo futuro: 2 a 5 lineas para delinear el trabajo futuro o de continuacion de vuestra memoria.
+
+    %Las mejoras que se pueden realizar a futuro de la aplicación es realizar que las interfaces sean responsivas y que tengan mejor armonía de colores. Además, se necesita que la interfaz funcione para diferentes navegadores tales como Safari y Opera, entre otro. 
 
 \end{resumen}
