--- a/Formato Memoria/memoria.tex
+++ b/Formato Memoria/memoria.tex
@@ -38,7 +38,7 @@
 	{Profesor Informante 2}
 \adicional{(sólo por si se necesita agregar algún otro profesor)}
 \director{Profesor del ramo Memoria de Título}
-\date{Enero, 2019}
+\date{Junio, 2019}
 
 %% inicio de documento
 \begin{document}
@@ -342,7 +342,6 @@ Dedicado a ...
 
 	\section{Sección de preguntas generales sobre el sistema}
 	\subfile{Anexo2/Anexo_B_General_Sistema}
-	%\include{Anexo2/Anexo_B_General_Sistema}
 	\include{Anexo2/Anexo_B_Funcionalidad}
 	\include{Anexo2/Anexo_B_Usabilidad}
 
