--- a/Formato Memoria/Anexo2/Anexo_B_Usabilidad.tex
+++ b/Formato Memoria/Anexo2/Anexo_B_Usabilidad.tex
@@ -1,6 +1,6 @@
-\section{Sección de preguntas sobre usabilidad e interfaz de usuario (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}.
+\section{Sección de preguntas sobre usabilidad e interfaz de usuario (En escala de 1 (En desacuerdo) a 5 (De acuerdo))}
 
-\paragraph{7.  ¿La aplicación es fácil de usar?}.
+\textbf{7.  ¿La aplicación es fácil de usar?}
 
 \begin{figure}[h]
     \centering
@@ -8,7 +8,7 @@
     \caption{\label{fig: Pregunta7}Resultado de la pregunta siete.}
 \end{figure}
 
-\paragraph{8.  ¿Se entiende cómo utilizar la aplicación sin necesidad de instrucciones?}.
+\textbf{8.  ¿Se entiende cómo utilizar la aplicación sin necesidad de instrucciones?}
 
 \begin{figure}[h]
     \centering
@@ -16,7 +16,8 @@
     \caption{\label{fig: Pregunta8}Resultado de la pregunta ocho.}
 \end{figure}
 
-\paragraph{9. ¿La distribución de los elementos en la pantalla es adecuada?}.
+\newpage
+\textbf{9. ¿La distribución de los elementos en la pantalla es adecuada?}
 
 \begin{figure}[h]
     \centering
@@ -24,16 +25,12 @@
     \caption{\label{fig: Pregunta9}Resultado de la pregunta nueve.}
 \end{figure}
 
-\paragraph{10. ¿El proceso completo de realizar una Solicitud de Fondo por Rendir es claro?}.
+\textbf{10. ¿El proceso completo de realizar una Solicitud de Fondo por Rendir es claro?}
 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.55\textwidth]{Imagenes/Pregunta10.png}
     \caption{\label{fig: Pregunta10}Resultado de la pregunta diez.}
 \end{figure}
-
-
-
-
 
 
