--- a/Formato Memoria/Glosario.tex
+++ b/Formato Memoria/Glosario.tex
@@ -1,74 +1,75 @@
 \begin{glosario}
 	\item 	\begin{description}
-			    \item[Fondos:] recursos  económicos  que  la  Universidad  de  Talca  dispone  para  la  realización  de diversas iniciativas y/o actividades estudiantiles~\cite{1}.
-			\end{description}
+		\item[Burocracia:] Administración ineficiente a causa del papeleo, la rigidez y las 
+		formalidades superfluas~\cite{16}.
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[Fondo por Rendir:] sumas de dinero solicitadas y puestas a disposición de los jefes de unidades y proyectos con presupuesto asignado y disponible, que necesiten atender gastos de carácter especial, imprevistos o urgentes, sujetos todos ellos a rendición posterior~\cite{1}.
-			\end{description}
+		\item[Burocrático(ca):] adj. Perteneciente o relativo a la burocracia~\cite{15}.
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[Facultad:] unidad académica que, en conformidad con el Estatuto y las Ordenanzas de la Universidad, agrupa a un cuerpo de personas asociadas con el propósito de enseñar e investigar en áreas afines del conocimiento superior. Una Facultad está dirigida por un Decano~\cite{1}.
-			\end{description}
+		\item[CAA:] Centro de alumnos. Organización estudiantil que representa a los alumnos de una carrera en particular~\cite{3}.
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[Decano:] autoridad superior de la Facultad y dirige todos los asuntos académicos, administrativos y financieros de ella~\cite{1}.
-			\end{description}
+		\item[DAAE:] Dirección de Apoyo a Actividades Estudiantiles. Unidad perteneciente a la Vicerrectoría de Desarrollo Estudiantil (VDE) que promueve el desarrollo integral de los estudiantes, mediante la entrega de herramientas complementarias a su formación académica, que les permitan adquirir las competencias necesarias para lograr un proyecto de vida personal y profesional exitoso, haciendo de la etapa universitaria una experiencia más enriquecedora~\cite{1}.
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[Escuela:] unidad básica de administración de uno o más programas docentes afines de pregrado. Esta a cargo de un(a) Director(a) de Escuela, quien depende jerárquicamente de un(a) Decano(a), o del Vicerrector(a) de Pregrado cuando se trate de carreras no adscritas a una Facultad. Excepcionalmente una Escuela puede depender del Rector(a)~\cite{1}.
-			\end{description}
+		\item[Decano:] autoridad superior de la Facultad y dirige todos los asuntos académicos, administrativos y financieros de ella~\cite{1}.
+	\end{description}
 
 	\item 	\begin{description}
-				\item[Director de Escuela:] académico que con dedicación preferente, está encargado de la gestión del plan de estudios de la(s) Carrera(s) a su cargo. Es designado por el Rector a proposición del Decano y depende jerárquicamente de éste ultimo~\cite{1}.			\end{description}
+		\item[Director de Escuela:] académico que con dedicación preferente, está encargado de la gestión del plan de estudios de la(s) Carrera(s) a su cargo. Es designado por el Rector a proposición del Decano y depende jerárquicamente de éste ultimo~\cite{1}.	
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[OE:] Organizaciones Estudiantiles. Estas son federación de estudiantes, centros de alumnos o grupos intermedios~\cite{2}.
-			\end{description}
+		\item[Engorroso(sa):] adj. Dificultoso, molesto~\cite{14}.
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[CAA:] Centro de alumnos. Organización estudiantil que representa a los alumnos de una carrera en particular~\cite{3}.
-			\end{description}
+		\item[Escuela:] unidad básica de administración de uno o más programas docentes afines de pregrado. Esta a cargo de un(a) Director(a) de Escuela, quien depende jerárquicamente de un(a) Decano(a), o del Vicerrector(a) de Pregrado cuando se trate de carreras no adscritas a una Facultad. Excepcionalmente una Escuela puede depender del Rector(a)~\cite{1}.
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[Federación de estudiantes:] Organización estudiantil que representa a los alumnos de un campus perteneciente a la Universidad~\cite{2}.
-			\end{description}
+		\item[Facultad:] unidad académica que, en conformidad con el Estatuto y las Ordenanzas de la Universidad, agrupa a un cuerpo de personas asociadas con el propósito de enseñar e investigar en áreas afines del conocimiento superior. Una Facultad está dirigida por un Decano~\cite{1}.
+	\end{description}
 
 	\item 	\begin{description}
-				\item[DAAE:] Dirección de Apoyo a Actividades Estudiantiles. Unidad perteneciente a la Vicerrectoría de Desarrollo Estudiantil (VDE) que promueve el desarrollo integral de los estudiantes, mediante la entrega de herramientas complementarias a su formación académica, que les permitan adquirir las competencias necesarias para lograr un proyecto de vida personal y profesional exitoso, haciendo de la etapa universitaria una experiencia más enriquecedora~\cite{1}.
-			\end{description}
+		\item[Federación de Estudiantes:] Organización estudiantil que representa a los alumnos de un campus perteneciente a la Universidad~\cite{2}.
+	\end{description}
 
 	\item 	\begin{description}
-			    \item[Resolución:] puede ser un decreto, una decisión o un fallo que emite una determinada autoridad. Estas pueden establecer reglas, voluntades, etc.
-			\end{description}
+		\item[Fondos:] recursos  económicos  que  la  Universidad  de  Talca  dispone  para  la  realización  de diversas iniciativas y/o actividades, entre ellas, las estudiantiles~\cite{1}.
+	\end{description}
+
+	\item 	\begin{description}
+			\item[Fondo por Rendir:] sumas de dinero solicitadas y puestas a disposición de los jefes de unidades y proyectos con presupuesto asignado y disponible, que necesiten atender gastos de carácter especial, imprevistos o urgentes, sujetos todos ellos a rendición posterior~\cite{1}.
+		\end{description}
 	
 	\item 	\begin{description}
-				\item[RU:] Resolución Universitaria.
-			\end{description}
+			\item[Grupos Itermedios:] grupos de estudiantes que se reúnen con un objetivo y/o intereses en común, los cuales son reconocidos por la Universidad de Talca~\cite{18}.
+		\end{description}
 
 	\item 	\begin{description}
-			    \item[Resolución Exenta:] comprenden aquellas en que no es necesario que sean visadas por la Contraloría General de la República~\cite{3}.
-			\end{description}
+			\item[OE:] Organizaciones Estudiantiles. Estas son federación de estudiantes, centros de alumnos o grupos intermedios~\cite{2}.
+		\end{description}
+
+	\item 	\begin{description}
+			\item[Resolución:] puede ser un decreto, una decisión o un fallo que emite una determinada autoridad. Estas pueden establecer reglas, voluntades, etc.
+		\end{description}
+	
+	\item 	\begin{description}
+			\item[Resolución Exenta:] comprenden aquellas en que no es necesario que sean visadas por la Contraloría General de la República~\cite{3}.
+		\end{description}
+	
+	\item 	\begin{description}
+			\item[RU:] Resolución Universitaria.
+		\end{description}
 
 	\item 	\begin{description}
 			    \item[Visar:] Dicho de la autoridad competente: Dar validez a un pasaporte u otro documento para determinado uso~\cite{4}.
 			\end{description} 
-
-	\item 	\begin{description}
-			    \item[Engorroso(sa):] adj. Dificultoso, molesto~\cite{14}.
-			\end{description}
-	
-	\item 	\begin{description}
-			    \item[Burocrático(ca):] adj. Perteneciente o relativo a la burocracia~\cite{15}.
-			\end{description}
-	
-	\item 	\begin{description}
-			    \item[Burocracia:] Administración ineficiente a causa del papeleo, la rigidez y las 
-				formalidades superfluas~\cite{16}.
-			\end{description}
-
-	\item 	\begin{description}
-			    \item[Grupos Itermedios:] grupos de estudiantes que se reúnen con un objetivo y/o intereses en común, los cuales son reconocidos por la Universidad de Talca~\cite{18}.
-			\end{description}
 
 \end{glosario}
